examples/deploy-operators/Crunchy/base/crunchy.yaml
apiVersion: v1
kind: Service
metadata:
  name: crunchypgsql-service-node
  namespace: democrunchy
spec:
  selector:
    postgres-operator.crunchydata.com/role: master
  ports:
    - name: crunchysql
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30010 
  type: NodePort
