examples/deploy-operators/Crunchy/base/pgadmincrunchy.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: democrunchy
  name: pgadmincrunchy
  labels:
    app: pgadmincrunchy
spec:
  type: ClusterIP
  selector:
    postgres-operator.crunchydata.com/role: pgadmin
  ports:
    - name: serviceport
      port: 5050
      targetPort: 5050
