examples/deploy-operators/Crunchy/base/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: democrunchy
  name: web2crunchy
  labels:
    app: web2crunchy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web2crunchy
  template:
    metadata:
      labels:
        app: web2crunchy
    spec:
      serviceAccountName: web2crunchy
      terminationGracePeriodSeconds: 5
      securityContext: {}
      containers:
      - name: server
        securityContext: {}
        image: registry-ocp01-xxnym.paas.cloud-temple.com/democrunchy/oc_2_postgres-crunchy:latest               
        ports:
        - name: serverport
          containerPort: 8000
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  namespace: democrunchy
  name: web2crunchy
  labels:
    app: web2crunchy
spec:
  type: ClusterIP
  selector:
    app: web2crunchy
  ports:
  - name: serviceport
    port: 8000
    targetPort: 8000
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend-route-web2crunchy
  namespace: democrunchy
  labels:
    ct-router-type: public
spec:
  host: webcrunchy.apps-ocp01-xxnym.paas.cloud-temple.com
  to:
    kind: Service
    name: web2crunchy
    weight: 100
  port:
    targetPort: 8000
  tls:
    termination: edge
